[gd_scene load_steps=5 format=3 uid="uid://rs5lu43ye1cr"]

[ext_resource type="Texture2D" uid="uid://cswb5do8rrj7q" path="res://pistol/pistol.png" id="1_tgeh0"]
[ext_resource type="Script" path="res://Scenes/gun.gd" id="1_x7lkc"]
[ext_resource type="Script" path="res://Scenes/Pistol.gd" id="3_t56l6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wfk7l"]
radius = 481.126

[node name="Gun" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_x7lkc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wfk7l")

[node name="WeponPivot" type="Marker2D" parent="."]
rotation = 0.0519901

[node name="Pistol" type="Sprite2D" parent="WeponPivot"]
position = Vector2(85.8838, -4.46913)
rotation = -0.0387441
texture = ExtResource("1_tgeh0")
script = ExtResource("3_t56l6")

[node name="ShootingPoint" type="Marker2D" parent="WeponPivot/Pistol"]
position = Vector2(25.9771, -11.5668)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
